Need to see how many tests we pass now after fixing up the rege

--- a/old_system/Usage.template
+++ b/old_system/Usage.template
@@ -2,10 +2,15 @@ package systemTestingDSL
 
 import systemTestingDSL.matchers._
 
-object Usage {
+object SleekTestSuiteUsage {
   def main(args: Array[String]): Unit = {
+  	
+  	val suite = new SleekTestSuite()
 
-  ##
+  	##
+
+  	suite.runAllTests
+  	suite generateTestStatistics
 
   }
 }
