--- a/Reporting Tool/settings.yaml
+++ b/Reporting Tool/settings.yaml
@@ -4,16 +4,16 @@
 # Directory settings for machines
 repository:
   remote: 
-  loris_local: = "/home/rohit/hg/sleek_hip/"
-  local: /Users/rohitmukherjee/dev/repositories/scalaWorkspace/High-Performance-DSLs/Reporting Tool/test_repo
+  loris_local: /home/rohit/hg/sleek_hip/
+  local: /Users/rohitmukherjee/dev/repositories/scalaWorkspace/High-Performance-DSLs/Reporting Tool/test_repo/
 
 # Application Settings
 app:
   # Time period to run tests in days
-  time_period: 93, # Run tests for commits made in the last months
+  time_period: 93 # Run tests for commits made in the last months
   output_directory_name: Sleek_Test_Results
   # Must end with a '/'
-  output_directory_location: /home/rohit/High-Performance-DSLs/Reporting Tool/branch_test_results
+  output_directory_location: /home/rohit/High-Performance-DSLs/Reporting Tool/
 
 # Test specific settings
 test:
