--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,2 +1,2 @@
-HIP_DIR=""/home/rohit/hg/sleek_hip/examples/working/hip"
-SLEEK_DIR="/home/rohit/hg/sleek_hip/examples/working/sleek"
+HIP_DIR="/home/rohit/hg/sleek_hip/examples/working/hip/"
+SLEEK_DIR="/home/rohit/hg/sleek_hip/examples/working/sleek/"
