--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,2 +1,9 @@
+# Please don't forget to add a trailing / to directories listed
+
 HIP_DIR="/home/rohit/hg/sleek_hip/examples/working/hip/"
 SLEEK_DIR="/home/rohit/hg/sleek_hip/examples/working/sleek/"
+SLEEK_OUTPUT_DIRECTORY="results/"
+HIP_OUTPUT_DIRECTORY="results/"
+DEFAULT_OUTPUT_DIRECTORY="results/"
+# Timeout in seconds
+TIMEOUT="300"
