--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,5 +5,5 @@ SLEEK_DIR="/home/rohit/hg/sleek_hip/examples/working/sleek/"
 SLEEK_OUTPUT_DIRECTORY="results/"
 HIP_OUTPUT_DIRECTORY="results/"
 DEFAULT_OUTPUT_DIRECTORY="results/"
-# Timeout in seconds
+# Timeout in seconds. Every Hip/Sleek test will Timeout after these number of seconds
 TIMEOUT="300"
