--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,16 @@
 # Please don't forget to add a trailing / to directories listed
 
+# Hip Specific Test Settings 
 HIP_DIR="/home/rohit/hg/sleek_hip/examples/working/hip/"
+HIP_OUTPUT_DIRECTORY="results/"
+
+# Sleek Specific Test Settings
 SLEEK_DIR="/home/rohit/hg/sleek_hip/examples/working/sleek/"
 SLEEK_OUTPUT_DIRECTORY="results/"
-HIP_OUTPUT_DIRECTORY="results/"
-DEFAULT_OUTPUT_DIRECTORY="results/"
+
 # Timeout in seconds. Every Hip/Sleek test will Timeout after these number of seconds
 TIMEOUT="300"
+DEFAULT_OUTPUT_DIRECTORY="results/"
+
+HIP_REF_SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga"
+HIP_REF_OUTPUT_DIR = "/home/rohit/hg/sleek_hip/referenceTests/"
