Added build tests regression

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,5 +12,7 @@ SLEEK_OUTPUT_DIRECTORY="results/"
 TIMEOUT="300"
 DEFAULT_OUTPUT_DIRECTORY="results/"
 
-HIP_REF_SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga"
+# Need to convert this into an array of objects
+HIP_REF_SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/"
 HIP_REF_OUTPUT_DIR = "/home/rohit/hg/sleek_hip/referenceTests/"
+OVERRIDE = "true"
