Made reference test builder more generic

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,12 @@ SLEEK_OUTPUT_DIRECTORY="results/"
 TIMEOUT="300"
 DEFAULT_OUTPUT_DIRECTORY="results/"
 
-# Need to convert this into an array of objects
-HIP_REF_SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/"
-HIP_REF_OUTPUT_DIR = "/home/rohit/hg/sleek_hip/referenceTests/"
+REFERENCE_TESTS = [
+					{ 
+						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/", 
+						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/referenceTests/",
+						 EXTENSION = ".ss",
+						 ARGUMENTS = "--print-min",
+						 COMMAND_NAME = "hip" 
+					 }
+				  ]
