--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,16 @@
-# Please don't forget to add a trailing / to directories listed
+# Please don't forget to add a trailing '/' to directories listed
+
+################################################
+HIP TESTS: TO CONFIGURE HipTestSuiteUsage
+################################################
 
 # Hip Specific Test Settings 
 HIP_DIR="/home/rohit/hg/sleek_hip/examples/working/hip/"
 HIP_OUTPUT_DIRECTORY="results/"
+
+################################################
+SLEEK TESTS: TO CONFIGURE SleekTestSuiteUsage
+################################################
 
 # Sleek Specific Test Settings
 SLEEK_DIR="/home/rohit/hg/sleek_hip/examples/working/sleek/"
@@ -12,12 +20,28 @@ SLEEK_OUTPUT_DIRECTORY="results/"
 TIMEOUT="300"
 DEFAULT_OUTPUT_DIRECTORY="results/"
 
-REFERENCE_TESTS = [
+#####################################################
+REGRESSION/REFERENCE TESTS: like test.sh, diff.sh etc.
+#####################################################
+
+# Place the settings to build tests for different directories and test types. For eg: this one shows baga and hip
+BUILD_REFERENCE_TESTS = [
 					{ 
 						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/", 
-						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/referenceTests/",
-						 EXTENSION = ".ss",
+						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						 SOURCE_EXTENSION = ".ss",
+						 REF_EXTENSION = ".ref"
 						 ARGUMENTS = "--print-min",
 						 COMMAND_NAME = "hip" 
 					 }
 				  ]
+				  
+RUN_REFERENCE_TESTS = [
+					{
+						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/",
+						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						SOURCE_EXTENSION = ".ss",
+						ARGUMENTS = "--print-min",
+						COMMAND_NAME = "hip" 
+					},
+					]
