Fixed conf and ext

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 # Please don't forget to add a trailing '/' to directories listed
 
 ################################################
-HIP TESTS: TO CONFIGURE HipTestSuiteUsage
+# HIP TESTS: TO CONFIGURE HipTestSuiteUsage
 ################################################
 
 # Hip Specific Test Settings 
@@ -9,7 +9,7 @@ HIP_DIR="/home/rohit/hg/sleek_hip/examples/working/hip/"
 HIP_OUTPUT_DIRECTORY="results/"
 
 ################################################
-SLEEK TESTS: TO CONFIGURE SleekTestSuiteUsage
+# SLEEK TESTS: TO CONFIGURE SleekTestSuiteUsage
 ################################################
 
 # Sleek Specific Test Settings
@@ -21,7 +21,7 @@ TIMEOUT="300"
 DEFAULT_OUTPUT_DIRECTORY="results/"
 
 #####################################################
-REGRESSION/REFERENCE TESTS: like test.sh, diff.sh etc.
+# REGRESSION/REFERENCE TESTS: like test.sh, diff.sh etc.
 #####################################################
 
 # Place the settings to build tests for different directories and test types. For eg: this one shows baga and hip
