--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -33,7 +33,15 @@ BUILD_REFERENCE_TESTS = [
 						 REF_EXTENSION = ".ref"
 						 ARGUMENTS = "--print-min",
 						 COMMAND_NAME = "hip" 
-					 }
+					 },
+					{ 
+						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/", 
+						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						 SOURCE_EXTENSION = ".slk",
+						 REF_EXTENSION = ".ref"
+						 ARGUMENTS = "--print-min",
+						 COMMAND_NAME = "sleek" 
+					 },
 				  ]
 				  
 RUN_REFERENCE_TESTS = [
@@ -44,4 +52,11 @@ RUN_REFERENCE_TESTS = [
 						ARGUMENTS = "--print-min",
 						COMMAND_NAME = "hip" 
 					},
+					{
+						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/",
+						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						SOURCE_EXTENSION = ".slk",
+						ARGUMENTS = "--print-min",
+						COMMAND_NAME = "sleek" 
+          },
 					]
