Added more tests for imm, sa, tinf, rho and post

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -34,13 +34,45 @@ BUILD_REFERENCE_TESTS = [
 						 ARGUMENTS = "--print-min",
 						 COMMAND_NAME = "hip" 
 					 },
-					{ 
-						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/", 
+					 { 
+						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/", 
 						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						 SOURCE_EXTENSION = ".slk",
+						 SOURCE_EXTENSION = ".ss",
 						 REF_EXTENSION = ".ref"
 						 ARGUMENTS = "--print-min",
-						 COMMAND_NAME = "sleek" 
+						 COMMAND_NAME = "hip" 
+					 },
+					 { 
+						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/sa/", 
+						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						 SOURCE_EXTENSION = ".ss",
+						 REF_EXTENSION = ".ref"
+						 ARGUMENTS = "--print-min",
+						 COMMAND_NAME = "hip" 
+					 },
+					 { 
+						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/rho/", 
+						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						 SOURCE_EXTENSION = ".ss",
+						 REF_EXTENSION = ".ref"
+						 ARGUMENTS = "--print-min",
+						 COMMAND_NAME = "hip" 
+					 },
+					 { 
+						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/", 
+						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						 SOURCE_EXTENSION = ".ss",
+						 REF_EXTENSION = ".ref"
+						 ARGUMENTS = "--print-min",
+						 COMMAND_NAME = "hip" 
+					 },
+					 { 
+						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/", 
+						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						 SOURCE_EXTENSION = ".ss",
+						 REF_EXTENSION = ".ref"
+						 ARGUMENTS = "--print-min",
+						 COMMAND_NAME = "hip" 
 					 },
 				  ]
 				  
@@ -53,10 +85,39 @@ RUN_REFERENCE_TESTS = [
 						COMMAND_NAME = "hip" 
 					},
 					{
-						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/",
+						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/",
 						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						SOURCE_EXTENSION = ".slk",
+						SOURCE_EXTENSION = ".ss",
 						ARGUMENTS = "--print-min",
-						COMMAND_NAME = "sleek" 
-          },
+						COMMAND_NAME = "hip" 
+					},
+					{
+						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/",
+						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						SOURCE_EXTENSION = ".ss",
+						ARGUMENTS = "--print-min",
+						COMMAND_NAME = "hip" 
+					},
+					{
+						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/",
+						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						SOURCE_EXTENSION = ".ss",
+						ARGUMENTS = "--print-min",
+						COMMAND_NAME = "hip" 
+					},
+					{
+						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/rho/",
+						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						SOURCE_EXTENSION = ".ss",
+						ARGUMENTS = "--print-min",
+						COMMAND_NAME = "hip" 
+					},
+					{
+						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/sa/",
+						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+						SOURCE_EXTENSION = ".ss",
+						ARGUMENTS = "--print-min",
+						COMMAND_NAME = "hip" 
+					},
+
 					]
