--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,6 +18,7 @@ SLEEK_OUTPUT_DIRECTORY="results/"
 
 # Timeout in seconds. Every Hip/Sleek test will Timeout after these number of seconds
 TIMEOUT="300"
+SIGNIFICANT_TIME = "1"
 DEFAULT_OUTPUT_DIRECTORY="results/"
 
 #####################################################
@@ -26,98 +27,74 @@ DEFAULT_OUTPUT_DIRECTORY="results/"
 
 # Place the settings to build tests for different directories and test types. For eg: this one shows baga and hip
 BUILD_REFERENCE_TESTS = [
-					{ 
-						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/", 
-						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						 SOURCE_EXTENSION = ".ss",
-						 REF_EXTENSION = ".ref"
-						 ARGUMENTS = "--print-min",
-						 COMMAND_NAME = "hip" 
-					 },
-					 { 
-						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/", 
-						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						 SOURCE_EXTENSION = ".ss",
-						 REF_EXTENSION = ".ref"
-						 ARGUMENTS = "--print-min",
-						 COMMAND_NAME = "hip" 
-					 },
-					 { 
-						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/sa/", 
-						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						 SOURCE_EXTENSION = ".ss",
-						 REF_EXTENSION = ".ref"
-						 ARGUMENTS = "--print-min",
-						 COMMAND_NAME = "hip" 
-					 },
-					 { 
-						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/rho/", 
-						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						 SOURCE_EXTENSION = ".ss",
-						 REF_EXTENSION = ".ref"
-						 ARGUMENTS = "--print-min",
-						 COMMAND_NAME = "hip" 
-					 },
-					 { 
-						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/", 
-						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						 SOURCE_EXTENSION = ".ss",
-						 REF_EXTENSION = ".ref"
-						 ARGUMENTS = "--print-min",
-						 COMMAND_NAME = "hip" 
-					 },
-					 { 
-						 SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/", 
-						 REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						 SOURCE_EXTENSION = ".ss",
-						 REF_EXTENSION = ".ref"
-						 ARGUMENTS = "--print-min",
-						 COMMAND_NAME = "hip" 
-					 },
-				  ]
-				  
+          {
+             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/", 
+             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+             SOURCE_EXTENSION = ".ss",
+             REF_EXTENSION = ".ref",
+             ARGUMENTS = "--print-min",
+             COMMAND_NAME = "hip"
+           },
+           {
+             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/",
+             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+             SOURCE_EXTENSION = ".ss",
+             REF_EXTENSION = ".ref",
+             ARGUMENTS = "--print-min",
+             COMMAND_NAME = "hip" 
+           },
+           { 
+             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/", 
+             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+             SOURCE_EXTENSION = ".ss",
+             REF_EXTENSION = ".ref",
+             ARGUMENTS = "--print-min",
+             COMMAND_NAME = "hip" 
+           },
+           { 
+             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/", 
+             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+             SOURCE_EXTENSION = ".ss",
+             REF_EXTENSION = ".ref",
+             ARGUMENTS = "--print-min",
+             COMMAND_NAME = "hip" 
+           },
+         ]
+          
 RUN_REFERENCE_TESTS = [
-					{
-						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/",
-						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						SOURCE_EXTENSION = ".ss",
-						ARGUMENTS = "--print-min",
-						COMMAND_NAME = "hip" 
-					},
-					{
-						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/",
-						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						SOURCE_EXTENSION = ".ss",
-						ARGUMENTS = "--print-min",
-						COMMAND_NAME = "hip" 
-					},
-					{
-						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/",
-						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						SOURCE_EXTENSION = ".ss",
-						ARGUMENTS = "--print-min",
-						COMMAND_NAME = "hip" 
-					},
-					{
-						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/",
-						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						SOURCE_EXTENSION = ".ss",
-						ARGUMENTS = "--print-min",
-						COMMAND_NAME = "hip" 
-					},
-					{
-						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/rho/",
-						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						SOURCE_EXTENSION = ".ss",
-						ARGUMENTS = "--print-min",
-						COMMAND_NAME = "hip" 
-					},
-					{
-						SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/sa/",
-						REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-						SOURCE_EXTENSION = ".ss",
-						ARGUMENTS = "--print-min",
-						COMMAND_NAME = "hip" 
-					},
-
-					]
+          {
+            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/",
+            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_EXTENSION = ".ss",
+            ARGUMENTS = "--print-min",
+            COMMAND_NAME = "hip" 
+          },
+          {
+            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/",
+            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_EXTENSION = ".ss",
+            ARGUMENTS = "--print-min",
+            COMMAND_NAME = "hip" 
+          },
+          {
+            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/",
+            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_EXTENSION = ".ss",
+            ARGUMENTS = "--print-min",
+            COMMAND_NAME = "hip" 
+          },
+          {
+            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/",
+            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_EXTENSION = ".ss",
+            ARGUMENTS = "--print-min",
+            COMMAND_NAME = "hip" 
+          },
+          {
+            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/rho/",
+            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_EXTENSION = ".ss",
+            ARGUMENTS = "--print-min",
+            COMMAND_NAME = "hip" 
+          },
+          ]
