Added performance reporting for sleek test suite

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,8 +18,9 @@ SLEEK_OUTPUT_DIRECTORY="results/"
 
 # Timeout in seconds. Every Hip/Sleek test will Timeout after these number of seconds
 TIMEOUT="300"
-SIGNIFICANT_TIME = "1"
+SIGNIFICANT_TIME_THRESHOLD = "1"
 DEFAULT_OUTPUT_DIRECTORY="results/"
+PERFORMANCE_FILE_NAME = "performance"
 
 #####################################################
 # REGRESSION/REFERENCE TESTS: like test.sh, diff.sh etc.
