--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -67,6 +67,7 @@ RUN_REFERENCE_TESTS = [
             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/",
             REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
             SOURCE_EXTENSION = ".ss",
+            REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
             COMMAND_NAME = "hip" 
           },
@@ -74,6 +75,7 @@ RUN_REFERENCE_TESTS = [
             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/",
             REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
             SOURCE_EXTENSION = ".ss",
+            REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
             COMMAND_NAME = "hip" 
           },
@@ -81,20 +83,7 @@ RUN_REFERENCE_TESTS = [
             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/",
             REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
             SOURCE_EXTENSION = ".ss",
-            ARGUMENTS = "--print-min",
-            COMMAND_NAME = "hip" 
-          },
-          {
-            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/",
-            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-            SOURCE_EXTENSION = ".ss",
-            ARGUMENTS = "--print-min",
-            COMMAND_NAME = "hip" 
-          },
-          {
-            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/rho/",
-            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
-            SOURCE_EXTENSION = ".ss",
+            REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
             COMMAND_NAME = "hip" 
           },
