--- a/src/main/resources/application.conf.template
+++ b/src/main/resources/application.conf.template
@@ -4,8 +4,8 @@
 # HIP TESTS: TO CONFIGURE HipTestSuiteUsage
 ################################################
 
-# Hip Specific Test Settings 
-HIP_DIR="/home/rohit/hg/sleek_hip/examples/working/hip/"
+# Hip Specific Test Settings
+HIP_DIR="/path/to/sleek/repo/examples/working/hip/"
 HIP_OUTPUT_DIRECTORY="results/"
 
 ################################################
@@ -13,7 +13,7 @@ HIP_OUTPUT_DIRECTORY="results/"
 ################################################
 
 # Sleek Specific Test Settings
-SLEEK_DIR="/home/rohit/hg/sleek_hip/examples/working/sleek/"
+SLEEK_DIR="/path/to/sleek/repo/examples/working/sleek/"
 SLEEK_OUTPUT_DIRECTORY="results/"
 
 # Timeout in seconds. Every Hip/Sleek test will Timeout after these number of seconds
@@ -26,65 +26,66 @@ PERFORMANCE_FILE_NAME = "performance"
 # REGRESSION/REFERENCE TESTS: like test.sh, diff.sh etc.
 #####################################################
 
-# Place the settings to build tests for different directories and test types. For eg: this one shows baga and hip
+# Place the settings to build tests for different directories and test types.
+# For eg: this one shows baga and hip
 BUILD_REFERENCE_TESTS = [
           {
-             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/", 
-             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+             SOURCE_DIRECTORY = "/path/to/sleek/repo/baga/",
+             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
              COMMAND_NAME = "hip"
            },
            {
-             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/",
-             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+             SOURCE_DIRECTORY = "/path/to/sleek/repo/tinf/",
+             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
-             COMMAND_NAME = "hip" 
+             COMMAND_NAME = "hip"
            },
-           { 
-             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/", 
-             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+           {
+             SOURCE_DIRECTORY = "/path/to/sleek/repo/imm/",
+             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
-             COMMAND_NAME = "hip" 
+             COMMAND_NAME = "hip"
            },
-           { 
-             SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/post/", 
-             REF_OUTPUT_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+           {
+             SOURCE_DIRECTORY = "/path/to/sleek/repo/post/",
+             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
-             COMMAND_NAME = "hip" 
+             COMMAND_NAME = "hip"
            },
          ]
-          
+
 RUN_REFERENCE_TESTS = [
           {
-            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/baga/",
-            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_DIRECTORY = "/path/to/sleek/repo/baga/",
+            REF_DIRECTORY = "/path/to/sleek/repo/reference/",
             SOURCE_EXTENSION = ".ss",
             REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
-            COMMAND_NAME = "hip" 
+            COMMAND_NAME = "hip"
           },
           {
-            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/imm/",
-            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_DIRECTORY = "/path/to/sleek/repo/imm/",
+            REF_DIRECTORY = "/path/to/sleek/repo/reference/",
             SOURCE_EXTENSION = ".ss",
             REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
-            COMMAND_NAME = "hip" 
+            COMMAND_NAME = "hip"
           },
           {
-            SOURCE_DIRECTORY = "/home/rohit/hg/sleek_hip/tinf/",
-            REF_DIRECTORY = "/home/rohit/hg/sleek_hip/reference/",
+            SOURCE_DIRECTORY = "/path/to/sleek/repo/tinf/",
+            REF_DIRECTORY = "/path/to/sleek/repo/reference/",
             SOURCE_EXTENSION = ".ss",
             REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
-            COMMAND_NAME = "hip" 
+            COMMAND_NAME = "hip"
           },
           ]
