--- a/src/main/resources/application.conf.template
+++ b/src/main/resources/application.conf.template
@@ -1,11 +1,16 @@
 # Please don't forget to add a trailing '/' to directories listed
 
+REPO_DIR="/path/to/sleek/repo/"
+
+HIP_COMMAND="${REPO_DIR}/hip"
+SLEEK_COMMAND="${REPO_DIR}/sleek"
+
 ################################################
 # HIP TESTS: TO CONFIGURE HipTestSuiteUsage
 ################################################
 
 # Hip Specific Test Settings
-HIP_DIR="/path/to/sleek/repo/examples/working/hip/"
+HIP_DIR="${REPO_DIR}/examples/working/hip/"
 HIP_OUTPUT_DIRECTORY="results/"
 
 ################################################
@@ -13,7 +18,7 @@ HIP_OUTPUT_DIRECTORY="results/"
 ################################################
 
 # Sleek Specific Test Settings
-SLEEK_DIR="/path/to/sleek/repo/examples/working/sleek/"
+SLEEK_DIR="${REPO_DIR}/examples/working/sleek/"
 SLEEK_OUTPUT_DIRECTORY="results/"
 
 # Timeout in seconds. Every Hip/Sleek test will Timeout after these number of seconds
@@ -29,60 +34,60 @@ PERFORMANCE_FILE_NAME = "performance"
 # Place the settings to build tests for different directories and test types.
 # For eg: this one shows baga and hip
 BUILD_REFERENCE_TESTS = [
-          {
-             SOURCE_DIRECTORY = "/path/to/sleek/repo/baga/",
-             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
+           {
+             SOURCE_DIRECTORY = "${REPO_DIR}/baga/",
+             REF_OUTPUT_DIRECTORY = "${REPO_DIR}/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
              COMMAND_NAME = "hip"
            },
            {
-             SOURCE_DIRECTORY = "/path/to/sleek/repo/tinf/",
-             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
+             SOURCE_DIRECTORY = "${REPO_DIR}/tinf/",
+             REF_OUTPUT_DIRECTORY = "${REPO_DIR}/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
              COMMAND_NAME = "hip"
            },
            {
-             SOURCE_DIRECTORY = "/path/to/sleek/repo/imm/",
-             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
+             SOURCE_DIRECTORY = "${REPO_DIR}/imm/",
+             REF_OUTPUT_DIRECTORY = "${REPO_DIR}/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
              COMMAND_NAME = "hip"
            },
            {
-             SOURCE_DIRECTORY = "/path/to/sleek/repo/post/",
-             REF_OUTPUT_DIRECTORY = "/path/to/sleek/repo/reference/",
+             SOURCE_DIRECTORY = "${REPO_DIR}/post/",
+             REF_OUTPUT_DIRECTORY = "${REPO_DIR}/reference/",
              SOURCE_EXTENSION = ".ss",
              REF_EXTENSION = ".ref",
              ARGUMENTS = "--print-min",
              COMMAND_NAME = "hip"
            },
-         ]
+           ]
 
 RUN_REFERENCE_TESTS = [
           {
-            SOURCE_DIRECTORY = "/path/to/sleek/repo/baga/",
-            REF_DIRECTORY = "/path/to/sleek/repo/reference/",
+            SOURCE_DIRECTORY = "${REPO_DIR}/baga/",
+            REF_DIRECTORY = "${REPO_DIR}/reference/",
             SOURCE_EXTENSION = ".ss",
             REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
             COMMAND_NAME = "hip"
           },
           {
-            SOURCE_DIRECTORY = "/path/to/sleek/repo/imm/",
-            REF_DIRECTORY = "/path/to/sleek/repo/reference/",
+            SOURCE_DIRECTORY = "${REPO_DIR}/imm/",
+            REF_DIRECTORY = "${REPO_DIR}/reference/",
             SOURCE_EXTENSION = ".ss",
             REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
             COMMAND_NAME = "hip"
           },
           {
-            SOURCE_DIRECTORY = "/path/to/sleek/repo/tinf/",
-            REF_DIRECTORY = "/path/to/sleek/repo/reference/",
+            SOURCE_DIRECTORY = "${REPO_DIR}/tinf/",
+            REF_DIRECTORY = "${REPO_DIR}/reference/",
             SOURCE_EXTENSION = ".ss",
             REF_EXTENSION = ".ref",
             ARGUMENTS = "--print-min",
